<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium"
    android:id="@+id/email_verification">

    <!-- Verification Icon -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_email"
        android:contentDescription="@string/email"
        app:tint="@color/primary"/>

    <!-- Verification Message -->
    <TextView
        android:id="@+id/tv_verification_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/verify_your_email"
        style="@style/TextAppearance.JobLinker.HeadlineMedium"
        android:textAlignment="center"
        android:gravity="center"/>

    <!-- Description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="We've sent a verification code to your email"
        style="@style/TextAppearance.JobLinker.BodyMedium"
        android:textAlignment="center"
        android:gravity="center"/>

    <!-- Verification Code Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_verification_code"
        style="@style/Widget.JobLinker.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/verification_code"
        app:startIconDrawable="@drawable/ic_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_verification_code"
            style="@style/Widget.JobLinker.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Resend Code -->
    <TextView
        android:id="@+id/tv_resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/resend_code"
        style="@style/TextAppearance.JobLinker.BodyMedium"
        android:textColor="@color/primary"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/spacing_small"/>

</LinearLayout>